# vgi-rpc-python

./: .gitignore  .pydoclint-baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  bench_fetch.py  llms.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: WIRE_PROTOCOL.md  access-log-spec.md  access-log.md  benchmarks.md  comparison.md  cross-language-conformance.md  examples.md  hosting.md  index.md  porting-guide.md  robots.txt  sticky-sessions-spec.md
docs/api/: auth.md  cli.md  core.md  external.md  http.md  index.md  introspection.md  logging.md  mtls.md  oauth.md  otel.md  sentry.md  serialization.md  streaming.md  transports.md
docs/log-shipping/: README.md  fluent-bit-azure.conf  fluent-bit-gcs.conf  fluent-bit-s3.conf  vector-azure.toml  vector-gcs.toml  vector-s3.toml
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: auth.py  hello_world.py  http_client.py  http_server.py  introspection.py  oauth_discovery.py  shared_memory.py  streaming.py  structured_types.py  subprocess_client.py  subprocess_worker.py  testing_http.py  testing_pipe.py
scripts/: regenerate_launcher_parity_vectors.py
tests/: __init__.py  _aiomock.py  _fixture_service.py  _launcher_conformance_run_server.py  _launcher_worker_run_server.py  conftest.py  serve_conformance_describe.py  serve_conformance_describe_http.py  serve_conformance_describe_unix.py  serve_conformance_describe_unix_threaded.py  serve_conformance_http.py  serve_conformance_http_auth.py  serve_conformance_http_shared.py  serve_conformance_http_strict.py  serve_conformance_pipe.py  serve_conformance_tcp.py  serve_conformance_unix.py  serve_conformance_unix_threaded.py  serve_fixture.py  serve_fixture_describe.py  serve_fixture_describe_http.py  serve_fixture_describe_unix.py  serve_fixture_describe_unix_threaded.py  serve_fixture_http.py  serve_fixture_kind_pipe.py  serve_fixture_pipe.py  serve_fixture_pool.py  serve_fixture_unix.py  serve_fixture_unix_threaded.py  serve_fixture_versioned.py  serve_fixture_versioned_http.py  test_access_log_rotation.py  test_access_log_spec.py  test_bad_requests.py  test_bearer.py  test_benchmarks.py  test_benchmarks_java.py  test_broken_pipe.py  test_call_statistics.py  test_cli.py  (+44 more)
vgi_rpc/: __init__.py  _codec.py  access_log.schema.json  access_log_conformance.py  cli.py  crypto.py  external.py  external_fetch.py  gcs.py  http.py  introspect.py  launcher.py  log.py  logging_utils.py  metadata.py  otel.py  pool.py  rpc.py  s3.py  sentry.py  shm.py  transport_options.py  utils.py  wire.py
vgi_rpc/conformance/: __init__.py  _cli.py  _impl.py  _protocol.py  _pytest_suite.py  _runner.py  _test_cli.py  _types.py  fake_storage.py
vgi_rpc/http/: __init__.py  _bearer.py  _client.py  _common.py  _mtls.py  _oauth.py  _oauth_jwt.py  _oauth_pkce.py  _retry.py  _server.py  _testing.py  fly.py
vgi_rpc/http/server/: __init__.py  _app.py  _app_stream.py  _app_unary.py  _errors.py  _factory.py  _middleware.py  _pages.py  _resources.py  _responses.py  _serve.py  _state_token.py  _sticky.py
vgi_rpc/rpc/: __init__.py  _client.py  _common.py  _debug.py  _server.py  _transport.py  _types.py  _wire.py
